--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-OPENAI_API_KEY = 
+OPENAI_API_KEY = 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
 OPENAI_API_TYPE = gpt-3
 OPENAI_API_BASE = //api.openai.com
 OPENAI_API_VERSION = v1
