--- a/.env
+++ b/.env
@@ -1,5 +1,1 @@
-OPENAI_API_KEY = 
-OPENAI_API_TYPE = gpt-3.5-turbo
-OPENAI_API_BASE = //api.openai.com
-OPENAI_API_VERSION = v1
-DEPLOYEMENT_NAME = "ChatBot"
+GOOGLE_API_KEY = AIzaSyC5jVGT9OHx4soEsliU60ByZsieobJPRms
